# orchext

./: .dockerignore  .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: fly-deploy.yml  server.yml  web.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: AccountSettingsView.tsx  App.tsx  AppearanceView.tsx  AuditView.tsx  AwaitingApprovalView.tsx  DocumentsTab.tsx  DocumentsView.tsx  GraphView.tsx  Layout.tsx  MembersView.tsx  OnboardingView.tsx  OrgRail.tsx  OrgSettingsView.tsx  ProposalsView.tsx  RichTextEditor.tsx  SettingsView.tsx  TeamsView.tsx  TokensView.tsx  VaultPicker.tsx  WorkspaceSwitcher.tsx  api.ts  theme.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  onboarding.rs  orgs.rs  settings.rs  state.rs  teams.rs  watch.rs  workspaces.rs
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
apps/web/scripts/: prebuild.sh
apps/web/src/: AccountSettingsView.tsx  App.tsx  AppearanceView.tsx  AuditView.tsx  ConsentView.tsx  DocumentsTab.tsx  DocumentsView.tsx  LoginView.tsx  MembersView.tsx  OrgRail.tsx  OrgSettingsView.tsx  ProposalsView.tsx  RichTextEditor.tsx  SettingsView.tsx  TeamsView.tsx  TokensView.tsx  UnlockView.tsx  api.ts  crypto.ts  docSource.ts  main.tsx  session.ts  styles.css
apps/web/src/wasm/: orchext_crypto_wasm.d.ts  orchext_crypto_wasm.js  orchext_crypto_wasm_bg.wasm  orchext_crypto_wasm_bg.wasm.d.ts  package.json
crates/mytex-audit/: Cargo.toml
crates/mytex-auth/src/: secret.rs
crates/mytex-index/: Cargo.toml
crates/mytex-index/src/: index.rs  lib.rs
crates/mytex-index/tests/: index.rs
crates/mytex-mcp/: Cargo.toml
crates/mytex-mcp/src/: error.rs  main.rs  resources.rs  title.rs  watch.rs
crates/mytex-server/: .env.example  Cargo.toml  Dockerfile
crates/mytex-server/migrations/: 0001_initial.sql
crates/mytex-server/src/: auth.rs  error.rs  lib.rs  password.rs
crates/mytex-server/tests/: auth_flow.rs
crates/mytex-vault/: Cargo.toml
crates/orchext-audit/: Cargo.toml
crates/orchext-audit/tests/: audit.rs
crates/orchext-auth/: Cargo.toml
crates/orchext-auth/src/: scope.rs  secret.rs
crates/orchext-auth/tests/: service.rs
crates/orchext-crypto/: Cargo.toml
crates/orchext-crypto-wasm/: Cargo.toml
crates/orchext-crypto-wasm/src/: lib.rs
crates/orchext-crypto/src/: content_key.rs  kdf.rs  lib.rs
crates/orchext-index/: Cargo.toml
crates/orchext-index/src/: index.rs
crates/orchext-index/tests/: index.rs
crates/orchext-mcp/: Cargo.toml
crates/orchext-mcp/src/: error.rs  main.rs  resources.rs  server.rs  title.rs  watch.rs
crates/orchext-mcp/tests/: mcp.rs
crates/orchext-server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
crates/orchext-server/migrations/: 0001_initial.sql  0002_vault.sql  0004_key_check.sql  0007_org_foundation.sql  0008_doc_author.sql  0010_teams.sql  0011_org_logos.sql  0012_oauth_clients.sql  0013_oauth_pending_authorizations.sql
crates/orchext-server/src/: accounts.rs  audit.rs  auth.rs  config.rs  cookies.rs  crypto_api.rs  discovery.rs  documents.rs  error.rs  idx.rs  lib.rs  main.rs  mcp.rs  oauth.rs  org_logo.rs  orgs.rs  password.rs  session_keys.rs  sessions.rs  teams.rs  tokens.rs
crates/orchext-server/tests/: auth_flow.rs  crypto_flow.rs  discovery_flow.rs  mcp_flow.rs  oauth_flow.rs  orgs_flow.rs  private_visibility_flow.rs  teams_flow.rs  vault_flow.rs
crates/orchext-sync/: Cargo.toml
crates/orchext-sync/src/: client.rs  crypto.rs  driver.rs  lib.rs  orgs.rs  session.rs  teams.rs
crates/orchext-vault/: Cargo.toml
crates/orchext-vault/src/: plain_file.rs  visibility.rs
crates/orchext-vault/tests/: plain_file.rs
crates/ourtex-audit/tests/: audit.rs
crates/ourtex-auth/: Cargo.toml
crates/ourtex-auth/src/: scope.rs
crates/ourtex-auth/tests/: service.rs
crates/ourtex-crypto/: Cargo.toml
crates/ourtex-crypto/src/: kdf.rs  lib.rs
crates/ourtex-mcp/: Cargo.toml
crates/ourtex-mcp/src/: main.rs  server.rs
crates/ourtex-mcp/tests/: mcp.rs
crates/ourtex-server/: .env.example  docker-compose.yml
crates/ourtex-server/src/: accounts.rs  auth.rs  config.rs  lib.rs  main.rs  sessions.rs
crates/ourtex-vault/src/: plain_file.rs
crates/ourtex-vault/tests/: plain_file.rs
deploy/: README.md
deploy/vercel/: README.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FORMAT.md  MCP.md  comparison-architecture.md  implementation-status.md  reconciled-v1-plan.md
docs/phases/: phase-1-core.md  phase-2-plan.md  phase-2b1-server.md  phase-2b2-remote-vault.md  phase-2b3-encryption.md  phase-2b4-web.md  phase-3-platform.md  phase-3a-rebrand-tasks.md  phase-3f-mcp-onboarding.md
