[package]
name = "orchext-server"
description = "Orchext server — HTTP API for hosted and self-hosted deployments"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "orchext-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["multipart", "form"] }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

tokio = { workspace = true, features = ["signal"] }
tokio-stream = { version = "0.1", default-features = false }
url = { workspace = true }
serde_urlencoded = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
orchext-vault = { workspace = true }
orchext-crypto = { workspace = true }
orchext-mcp = { workspace = true }
serde_yml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = { workspace = true, features = ["http1", "json", "tokio", "query", "matched-path"] }
tower = { workspace = true }
