[package]
name = "orchext-sync"
description = "Client-side sync: RemoteVaultDriver + helpers for talking to orchext-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
orchext-vault = { workspace = true }
orchext-crypto = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
url = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
