[package]
name = "ourtex-desktop"
description = "Ourtex desktop management app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
name = "ourtex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ourtex-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ourtex-vault = { workspace = true }
ourtex-index = { workspace = true }
ourtex-auth = { workspace = true }
ourtex-audit = { workspace = true }
ourtex-sync = { workspace = true }
ourtex-crypto = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
