[package]
name = "orchext-desktop"
description = "Orchext desktop management app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
name = "orchext_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "orchext-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
orchext-vault = { workspace = true }
orchext-index = { workspace = true }
orchext-auth = { workspace = true }
orchext-audit = { workspace = true }
orchext-sync = { workspace = true }
orchext-crypto = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
